[workspace]
resolver = "2"
members = [
    "loctree-mcp",
]

[workspace.package]
version = "0.13.1"
edition = "2024"
rust-version = "1.91.1"
license = "BUSL-1.1"
authors = ["Loctree <loct@loct.io>"]

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
thiserror = "2"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rmcp = { version = "1.7", features = ["server"] }
futures = "0.3"
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
tokio-util = { version = "0.7", features = ["rt"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
subtle = "2.6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
sha2 = "0.10"
schemars = "1"
aicx = { version = "0.10.0", default-features = false, features = ["loctree-consumer"] }
loctree = "0.13.1"
loctree-ast = "0.13.1"
report-leptos = "0.13.1"
